--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -101,7 +101,7 @@ jobs:
           host: ${{ env.SERVER_IP }}
           username: ${{ env.SERVER_USER }}
           password: ${{ env.SERVER_PASSWORD }}
-          source: ${{ env.CURR_WORKING_DIRECTORY }}
+          source: .
           target: /home/${{ env.SERVER_USER }}/sites/${{ env.PROJECT_NAME }}/${{ env.ENVIRONMENT }}
       - name: Deploy
         uses: appleboy/ssh-action@v1.0.0
