--- a/.github/workflows/bot.yml
+++ b/.github/workflows/bot.yml
@@ -91,7 +91,7 @@ jobs:
           username: ${{ env.SERVER_USER }}
           password: ${{ env.SERVER_PASSWORD }}
           script: |
-            SITE_PATH="/home/${{ env.SERVER_USER }}/sites/${{ env.PROJECT_NAME }}/${{ env.ENVIRONMENT }}/
+            SITE_PATH="/home/${{ env.SERVER_USER }}/sites/${{ env.PROJECT_NAME }}/${{ env.ENVIRONMENT }}
             rm -rf $SITE_PATH
             mkdir -p $SITE_PATH
 
@@ -101,7 +101,7 @@ jobs:
           host: ${{ env.SERVER_IP }}
           username: ${{ env.SERVER_USER }}
           password: ${{ env.SERVER_PASSWORD }}
-          source: .
+          source: ${{ env.CURR_WORKING_DIRECTORY }}
           target: /home/${{ env.SERVER_USER }}/sites/${{ env.PROJECT_NAME }}/${{ env.ENVIRONMENT }}
       - name: Deploy
         uses: appleboy/ssh-action@v1.0.0
